--- a/views/home/dashboard.html
+++ b/views/home/dashboard.html
@@ -5,14 +5,16 @@
 
 {% block body %}
 <div class="pure-u-1-1" id="welcome-header">
-  Hello!
   <div id="welcome-text">
       <form method="get" action="search">
               <input type="text" value="8" name="query" />
               <button type="submit">Give it now!</button>
             </form>
-      This is content from Views/Home/Index.html. <br/><br/>
-      The outer template is Views/Layout.html.
+      <div class="data">
+          {% for argument in data %}
+            {{ argument }}<br>
+        {% endfor %}
+      </div>
   </div>
 </div>
 {% endblock %}
