--- a/views/layout.html
+++ b/views/layout.html
@@ -1,21 +1,55 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/static/css/site.css"/>
-    <title>MVC with CherryPy</title>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="MDMPy">
+    <title>MDMPy</title>
+
     <link rel="stylesheet" type="text/css" href="/static/css/pure-min.css"/>
+    <link rel="stylesheet" href="/static/css/side-menu.css">
     {% block head %}{% endblock %}
 </head>
 <body>
 
-<div id="top-section">
+
+
+<div id="layout">
+    <!-- Menu toggle -->
+    <a href="#menu" id="menuLink" class="menu-link">
+        <!-- Hamburger icon -->
+        <span></span>
+    </a>
+
+    <div id="menu">
+        <div class="pure-menu">
+            <a class="pure-menu-heading" href="#">MDMPy</a>
+
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Dashboard</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Games</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Books</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Settings</a></li>
+
+                <li class="pure-menu-item" class="menu-item-divided pure-menu-selected">
+                    <a href="#" class="pure-menu-link">Services</a>
+                </li>
+
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="main">
+
+        <div class="content">
+            {% block body %}{% endblock %}
+        </div>
+    </div>
 </div>
 
-<div class="pure-g" id="middle-section">
-{% block body %}{% endblock %}
-</div>
-
+<script src="/static/js/contrib/jquery-3.1.1.min.js"></script>
+<script src="/static/js/ui.js"></script>
+{% block footer %}{% endblock %}
 </body>
 </html>
