--- a/views/layout.html
+++ b/views/layout.html
@@ -7,12 +7,12 @@
     <title>MDMPy</title>
 
     <link rel="stylesheet" type="text/css" href="/static/css/pure-min.css"/>
-    <link rel="stylesheet" href="/static/css/side-menu.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/side-menu.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/iziModal.min.css"/>
     {% block head %}{% endblock %}
 </head>
 <body>
-
-
 
 <div id="layout">
     <!-- Menu toggle -->
@@ -48,8 +48,11 @@
     </div>
 </div>
 
-<script src="/static/js/contrib/jquery-3.1.1.min.js"></script>
+<div id="modal-alert" class="iziModal" data-iziModal-group="alert">Alert</div>
+
+<script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/ui.js"></script>
+<script src="/static/js/iziModal.min.js"></script>
 {% block footer %}{% endblock %}
 </body>
 </html>
