--- a/views/layout.html
+++ b/views/layout.html
@@ -11,34 +11,30 @@
 
     <title>MDMPy</title>
 
-    <link rel="stylesheet" type="text/css" href="/static/css/pure-min.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/materialize.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="/static/css/side-menu.css">
     <link rel="stylesheet" type="text/css" href="/static/css/ns-style-other.css"/>
     <link rel="stylesheet" type="text/css" href="/static/css/global.css"/>
     {% block head %}{% endblock %}
 </head>
 <body>
 
-<div id="layout">
-    <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-        <!-- Hamburger icon -->
-        <span></span>
-    </a>
-
-    <div id="menu">
-        <div class="pure-menu">
-            <a class="pure-menu-heading" href="#"><img class="pure-img" src="/static/images/MDMPy_logo.png"></a>
-
-            <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="/dashboard" class="pure-menu-link">Dashboard</a></li>
-                <li class="pure-menu-item"><a href="/games" class="pure-menu-link">Games</a></li>
-                <li class="pure-menu-item"><a href="/books" class="pure-menu-link">Books</a></li>
-                <li class="pure-menu-item"><a href="/music" class="pure-menu-link">Music</a></li>
-                <li class="pure-menu-item"><a href="/settings" class="pure-menu-link">Settings</a></li>
-            </ul>
-        </div>
+<div>
+    <div class="">
+        <nav>
+            <div class="nav-wrapper valign-wrapper">
+                <div class="logo-wrapper valign-wrapper">
+                    <a href="#" class="brand-logo valign"></a>
+                </div>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="/dashboard" class="pure-menu-link">Dashboard</a></li>
+                    <li><a href="/games" class="pure-menu-link">Games</a></li>
+                    <li><a href="/books" class="pure-menu-link">Books</a></li>
+                    <li><a href="/music" class="pure-menu-link">Music</a></li>
+                    <li><a href="/settings" class="pure-menu-link">Settings</a></li>
+                </ul>
+            </div>
+        </nav>
     </div>
 
     <div id="main">
@@ -49,7 +45,6 @@
     </div>
 </div>
 
-<div id="modal-alert" class="iziModal" data-iziModal-group="alert">Alert</div>
 
 <script src="/static/js/jquery-3.1.1.min.js"></script>
 <script src="/static/js/modernizr.custom.js"></script>
@@ -57,6 +52,7 @@
 <script src="/static/js/notificationFx.js"></script>
 <script src="/static/js/moment.min.js"></script>
 <script src="/static/js/ui.js"></script>
+<script src="/static/js/materialize.js"></script>
 {% block footer %}{% endblock %}
 </body>
 </html>
