--- a/static/css/materialize.css
+++ b/static/css/materialize.css
@@ -4344,138 +4344,138 @@ small {
 }
 
 .flow-text {
-  font-weight: 300;
+  font-weight: 300 !important;
 }
 
 @media only screen and (min-width: 360px) {
   .flow-text {
-    font-size: 1.2rem;
+    font-size: 1.2rem !important;
   }
 }
 
 @media only screen and (min-width: 390px) {
   .flow-text {
-    font-size: 1.224rem;
+    font-size: 1.224rem !important;
   }
 }
 
 @media only screen and (min-width: 420px) {
   .flow-text {
-    font-size: 1.248rem;
+    font-size: 1.248rem !important;
   }
 }
 
 @media only screen and (min-width: 450px) {
   .flow-text {
-    font-size: 1.272rem;
+    font-size: 1.272rem !important;
   }
 }
 
 @media only screen and (min-width: 480px) {
   .flow-text {
-    font-size: 1.296rem;
+    font-size: 1.296rem !important;
   }
 }
 
 @media only screen and (min-width: 510px) {
   .flow-text {
-    font-size: 1.32rem;
+    font-size: 1.32rem !important;
   }
 }
 
 @media only screen and (min-width: 540px) {
   .flow-text {
-    font-size: 1.344rem;
+    font-size: 1.344rem !important;
   }
 }
 
 @media only screen and (min-width: 570px) {
   .flow-text {
-    font-size: 1.368rem;
+    font-size: 1.368rem !important;
   }
 }
 
 @media only screen and (min-width: 600px) {
   .flow-text {
-    font-size: 1.392rem;
+    font-size: 1.392rem !important;
   }
 }
 
 @media only screen and (min-width: 630px) {
   .flow-text {
-    font-size: 1.416rem;
+    font-size: 1.416rem !important;
   }
 }
 
 @media only screen and (min-width: 660px) {
   .flow-text {
-    font-size: 1.44rem;
+    font-size: 1.44rem !important;
   }
 }
 
 @media only screen and (min-width: 690px) {
   .flow-text {
-    font-size: 1.464rem;
+    font-size: 1.464rem !important;
   }
 }
 
 @media only screen and (min-width: 720px) {
   .flow-text {
-    font-size: 1.488rem;
+    font-size: 1.488rem !important;
   }
 }
 
 @media only screen and (min-width: 750px) {
   .flow-text {
-    font-size: 1.512rem;
+    font-size: 1.512rem !important;
   }
 }
 
 @media only screen and (min-width: 780px) {
   .flow-text {
-    font-size: 1.536rem;
+    font-size: 1.536rem !important;
   }
 }
 
 @media only screen and (min-width: 810px) {
   .flow-text {
-    font-size: 1.56rem;
+    font-size: 1.56rem !important;
   }
 }
 
 @media only screen and (min-width: 840px) {
   .flow-text {
-    font-size: 1.584rem;
+    font-size: 1.584rem !important;
   }
 }
 
 @media only screen and (min-width: 870px) {
   .flow-text {
-    font-size: 1.608rem;
+    font-size: 1.608rem !important;
   }
 }
 
 @media only screen and (min-width: 900px) {
   .flow-text {
-    font-size: 1.632rem;
+    font-size: 1.632rem !important;
   }
 }
 
 @media only screen and (min-width: 930px) {
   .flow-text {
-    font-size: 1.656rem;
+    font-size: 1.656rem !important;
   }
 }
 
 @media only screen and (min-width: 960px) {
   .flow-text {
-    font-size: 1.68rem;
+    font-size: 1.68rem !important;
   }
 }
 
 @media only screen and (max-width: 360px) {
   .flow-text {
-    font-size: 1.2rem;
+    font-size: 1.2rem !important;
   }
 }
 
