--- a/views/settings/main.html
+++ b/views/settings/main.html
@@ -63,9 +63,10 @@
             <td class="s1">
                 <div class="input-field">
                     <select id="type" class="type">
-                        <option value="torznab">Type</option>
+                        <option value="">Type</option>
                         <option value="torznab">Torznab</option>
                     </select>
+                    <label>Type</label>
                 </div>
             </td>
 
@@ -89,10 +90,11 @@
 
             <td class="s1">
                 <div class="input-field">
-                    <select id="type" class="type">
-                        <option value="torznab">Type</option>
+                    <select id="type" class="type" value="{{indexer.type}}">
+                        <option value="">Type</option>
                         <option value="torznab">Torznab</option>
                     </select>
+                    <label>Type</label>
                 </div>
             </td>
 
