--- a/views/music/main.html
+++ b/views/music/main.html
@@ -1,12 +1,15 @@
 {% extends "layout.html" %}
 {% block head %}
-    <link rel="stylesheet" type="text/css" href="/static/css/views/home/index.css"/>
 {% endblock %}
 
 {% block body %}
-<div class="pure-u-1-1" id="welcome-header">
-      <input id="searchInput" type="text" value="" name="query" />
-      <button id="search" class="pure-button button-large button-secondary"><i class="fa fa-search"></i> Search</button>
+<div>
+    <div class="input-field col s6">
+      <i class="fa fa-search prefix"></i>
+      <input id="searchInput" type="text" class="validate" name="query">
+      <label for="searchInput">Search</label>
+      <button id="search" class=""><i class="fa fa-search"></i> Search</button>
+    </div>
 </div>
 
 <div id="searchResults" class="pure-g"></div>
